; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/superio/extr_superio.c_sio_readw.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/superio/extr_superio.c_sio_readw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.resource*, i64)* @sio_readw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sio_readw(%struct.resource* %0, i64 %1) #0 {
  %3 = alloca %struct.resource*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.resource* %0, %struct.resource** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.resource*, %struct.resource** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @sio_read(%struct.resource* %6, i64 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = shl i32 %9, 8
  store i32 %10, i32* %5, align 4
  %11 = load %struct.resource*, %struct.resource** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = add nsw i64 %12, 1
  %14 = call i32 @sio_read(%struct.resource* %11, i64 %13)
  %15 = load i32, i32* %5, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @sio_read(%struct.resource*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
